[package]
name = "flubber"
version = "0.1.0"
authors = ["loading"]
edition = "2021"
rust-version = "1.63"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.11.0"
deno_console = "0.78.0"
deno_core = "0.160.0"
deno_fetch = "0.101.0"
deno_url = "0.78.0"
deno_web = "0.109.0"
deno_webidl = "0.78.0"
tokio = { version = "1.21.2", features = ["full"] }
